[project]
name = "bitcoin_wallet_notifier"
version = "0.1.0"
description = "A notifier for bitcoin wallets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apprise>=1.9.4",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pylsp-mypy>=0.7.0",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.1",
    "ruff>=0.12.11",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_unreachable = true
check_untyped_defs = true
follow_imports = "silent"
warn_no_return = true
plugins = ["pydantic.mypy"]
exclude = ["docs/.*", "lab/.*"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/**",
    "lab/**",
]

line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"src/test_prism.py" = ["T201"]
"src/tools/create_jwt_token.py" = ["T201"]
"src/tools/test_prism_manual.py" = ["T201"]
"src/tools/test_glooko_manual.py" = ["T201"]
"src/tools/test_dexcom_manual.py" = ["T201"]
"src/tests/*" = ["PLR0913", "PLR2004"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "T20",
    "PL",
    "B",
    "A",
    "C4",
    "TID",
    "ERA",
    "RET",
    "W",
    "C90",
    "ARG",
    "Q",
    "FLY",
    "SIM",
    "COM",
    "D",
    "N",
]
ignore = ["D100", "D104", "D203", "D212", "PLC0415"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"
